src/objects/BudgetHeader__c.object
<CustomObject>
    <fields>
        <fullName>AppliedTotalRevenue__c</fullName>
        <formula>IF( OverrideTotalRevenue__c == 0,  TotalRevenue__c , OverrideTotalRevenue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetMethod__c</fullName>
        <label>Budget Method</label>
        <picklist>
            <picklistValues>
                <fullName>Task</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BudgetName__c</fullName>
        <label>Budget Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarryingoutOrganization_OUID__c</fullName>
        <formula>Project__r.CarryingOutOrganization__r.OUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CarryingoutOrganization OUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeManagerApprovedForSynch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Manager Approved For Synch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Manager Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataInconsistencyWarning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Budget contains a data inconsistency.</description>
        <label>Data Inconsistency Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GMNSR__c</fullName>
        <formula>IF(NetServicesRevenue__c = 0, 0,GrossMargin__c / NetServicesRevenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM/NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrossMargin__c</fullName>
        <formula>TotalRevenue__c - TotalOverhead__c -  TotalFeeAmount__c -  TotalSubAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MultiLineBurdened__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi line Burdened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NMNSR__c</fullName>
        <formula>IF(NetServicesRevenue__c = 0, 0, NetMargin__c / NetServicesRevenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NM/NSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NetMargin__c</fullName>
        <formula>TotalRevenue__c - TotalCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetServicesRevenue__c</fullName>
        <formula>TotalRevenue__c -  TotalSubAmount__c -  TotalFeeAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Services Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalBudget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OverrideTotalRevenue__c</fullName>
        <description>Flat rate revenue amount, overriding estimated revenue.</description>
        <label>Override Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>BudgetHeaders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StatusAsOfDate__c</fullName>
        <label>Status As Of Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SyncingWithProjectTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syncing with Project Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalContingencyAmount__c</fullName>
        <label>Total Contingency Amount</label>
        <summarizedField>BudgetResource__c.TotalCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetResource__c.ResourceType__c</field>
            <operation>equals</operation>
            <value>Contingency</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>BudgetResource__c.TotalCost__c</summarizedField>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFeeAmount__c</fullName>
        <label>Total Fee Amount</label>
        <summarizedField>BudgetResource__c.TotalCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetResource__c.ResourceType__c</field>
            <operation>equals</operation>
            <value>ODC/FEE</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFringe__c</fullName>
        <label>Total Fringe</label>
        <summarizedField>BudgetResource__c.TotalFringe__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetResource__c.ResourceType__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalLaborAmount__c</fullName>
        <label>Total Labor Amount</label>
        <summarizedField>BudgetResource__c.TotalCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetResource__c.ResourceType__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNonLabor__c</fullName>
        <label>Total Non Labor</label>
        <summarizedField>BudgetResource__c.TotalCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetResource__c.ResourceType__c</field>
            <operation>notEqual</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalOverhead__c</fullName>
        <label>Total Overhead</label>
        <summarizedField>BudgetResource__c.TotalOverhead__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetResource__c.ResourceType__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalRawCost__c</fullName>
        <label>Total Raw Cost</label>
        <summarizedField>BudgetResource__c.TotalRawCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetResource__c.ResourceType__c</field>
            <operation>equals</operation>
            <value>Labor/Person</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalResourceAmount__c</fullName>
        <formula>TotalSubAmount__c +  TotalLaborAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Resource Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <summarizedField>BudgetResource__c.TotalRevenue__c</summarizedField>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalSubAmount__c</fullName>
        <label>Total Sub Amount</label>
        <summarizedField>BudgetResource__c.TotalCost__c</summarizedField>
        <summaryFilterItems>
            <field>BudgetResource__c.ResourceType__c</field>
            <operation>equals</operation>
            <value>Subcontractor</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetResource__c.BudgetHeader__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Budget Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BH-{00000000}</displayFormat>
        <label>Budget Header Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Headers</pluralLabel>
    <recordTypes>
        <fullName>Baseline</fullName>
        <active>true</active>
        <label>Baseline</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_Order</fullName>
        <active>true</active>
        <label>Change Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>EAC</fullName>
        <active>true</active>
        <label>EAC</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>